<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_important"
            android:icon="@drawable/ic_star_black_48dp"
            android:title="@string/important"/>
        <item
            android:id="@+id/nav_sended"
            android:icon="@drawable/ic_send_black_48dp"
            android:title="@string/sended"/>
        <item
            android:id="@+id/nav_all_mails"
            android:icon="@drawable/ic_email_black_48dp"
            android:title="@string/allMail"/>
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_note_black_48dp"
            android:title="@string/drafts"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_48dp"
            android:title="@string/trash"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_alert_circle_black_48dp"
            android:title="@string/about"/>
    </group>

</menu>
